select: remove nice-select for safari because of a known bug with fixed position and overflow
Make the safari select looks the same than for other browser
Only the dropdown will be different

--- a/src/static/css/pad/form.css
+++ b/src/static/css/pad/form.css
@@ -32,9 +32,6 @@ select, .nice-select {
 .nice-select:hover {
   border-color: #dbdbdb;
 }
-.nice-select:active,.nice-select.open,.nice-select:focus {
-  /*border-color: #999;*/
-}
 .nice-select:after {
   border-bottom: 2px solid #999;
   border-right: 2px solid #999;
